# hasher

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  Makefile  README.rst  main.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.cfg.md5  setup.py  tox.ini
.github/workflows/: python.yaml  release.yaml
hasher/: __init__.py  __main__.py  app.py  exceptions.py  hashes.py  main.py  parser.py  test_hasher.py  utils.py  version.py
hasher/hashes/: __init__.py  base.py  md5.py  sha1.py
hasher/tests/: test_base.py  test_parser.py
hasher_test/: test_hasher.py
src/hasher/: __init__.py  __main__.py  app.py  args.py  hashes.py  parser.py
src/hasher/hashes/: __init__.py  md5.py
src/hasher/tests/: test_utils.py
tests/: test_app.py  test_base.py  test_hasher.py  test_utils.py
