[tool.poetry]
authors = ["Walter Scheper <walter.scheper@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Utilities",
]
description = "Provide multiple hashing algorithms from a single code base"
homepage = "https://github.com/wfscheper/hasher"
license = "Apache-2.0"
name = "hasher"
packages = [
  {include = "hasher", from = "src"},
]
readme = "README.rst"
repository = "https://github.com/wfscheper/hasher.git"
version = "2.0.1"

[tool.poetry.scripts]
hasher = "hasher.app:hasher"

[tool.poetry.dependencies]
click = "^8.1.3"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[tool.coverage.run]
branch = true
omit = ["tests/*"]
source = ["hasher"]

[tool.coverage.paths]
source = [
  "hasher",
  "*/site-packages/hasher",
]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.isort]
from_first = true
line_length = 88
profile = "black"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
