[tool.poetry]
authors = ["Walter Scheper <walter.scheper@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Utilities",
]
description = "Provide multiple hashing algorithms from a single code base"
homepage = "https://github.com/wfscheper/hasher"
license = "Apache-2.0"
name = "hasher"
packages = [
  {include = "hasher", from = "src"},
]
readme = "README.rst"
repository = "https://github.com/wfscheper/hasher.git"
version = "2.0.1"

[tool.poetry.scripts]
hasher = "hasher.app:hasher"

[tool.poetry.dependencies]
click = "^8.1.3"
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
pytest = "^8.0.2"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.coverage.run]
branch = true
omit = ["tests/*"]
source = ["hasher"]

[tool.coverage.paths]
source = [
  "hasher",
  "*/site-packages/hasher",
]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E", "W",
  # pyflakes
  "F",
  # isort
  "I",
  # bugbear
  "B",
  # pyupgrade
  "UP",
]

[tool.ruff.lint.isort]
from-first = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
