[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1.3,<9",
]
description = "Provide multiple hashing algorithms from a single code base"
homepage = "https://github.com/wfscheper/hasher"
license = "Apache-2.0"
name = "hasher"
readme = "README.md"
requires-python = ">=3.10"
version = "2.1.0a1"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[tool.coverage.run]
branch = true
omit = ["tests/*"]
source = ["hasher"]

[tool.coverage.paths]
source = [
  "hasher",
  "*/site-packages/hasher",
]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  "W", # pyflakes
  "F", # isort
  "I", # bugbear
  "B", # pyupgrade
  "UP",
]

[tool.ruff.lint.isort]
from-first = true
